--- a/index.html
+++ b/index.html
@@ -7,24 +7,29 @@
 </head>
 <body>
  <div class="tastiera">
+   <div class="tasto" onclick="scriviTxt(M)">M</div>
    <div class="tasto" onclick="scriviTxt('m')">m</div>
    <div class="tasto" onclick="scriviTxt(1)">1</div>
    <div class="tasto" onclick="scriviTxt(2)">2</div>
    <div class="tasto" onclick="scriviTxt(3)">3</div><br>
+   <div class="tasto" onclick="scriviTxt('h')">h</div>
    <div class="tasto" onclick="scriviTxt('l')">l</div>
    <div class="tasto" onclick="scriviTxt(4)">4</div>
    <div class="tasto" onclick="scriviTxt(5)">5</div>
    <div class="tasto" onclick="scriviTxt(6)">6</div><br>
+   <div class="tasto" onclick="scriviTxt('v')">v</div>
    <div class="tasto" onclick="scriviTxt('c')">c</div>
    <div class="tasto" onclick="scriviTxt(7)">7</div>
    <div class="tasto" onclick="scriviTxt(8)">8</div>
    <div class="tasto" onclick="scriviTxt(9)">9</div><br>
+   <div class="tasto" onclick="scriviTxt('<')">&lt;</div>
    <div class="tasto" onclick="scriviTxt('s')">s</div>
    <div class="tasto" onclick="scriviTxt('z')">z</div>
    <div class="tasto" onclick="scriviTxt(0)">0</div>
    <div class="tasto" onclick="scriviTxt('-')">-</div><br>
+   <div class="tasto" onclick="scriviTxt('>')">&gt</div>
    <div class="tasto" onclick="scriviTxt('x')">x</div>
-   <div class="tasto" style="width:480px" onclick="scriviTxt('_')">___</div>
+   <div class="tasto" style="width:390px" onclick="scriviTxt('_')">___</div>
  </div>
   <a href="https://docs.google.com/document/d/12QVBoBTFp7NUyzm3mmXX1KyOid-myt4_K6WE8-mMniI/edit?usp=sharing" target="_blank"> <div class="bottone"></div>
   </a>
