--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
  <div class="tastiera">
-   <div class="tasto" onclick="scriviTxt(M)">M</div>
+   <div class="tasto" onclick="scriviTxt('M')">M</div>
    <div class="tasto" onclick="scriviTxt('m')">m</div>
    <div class="tasto" onclick="scriviTxt(1)">1</div>
    <div class="tasto" onclick="scriviTxt(2)">2</div>
@@ -22,19 +22,18 @@
    <div class="tasto" onclick="scriviTxt(7)">7</div>
    <div class="tasto" onclick="scriviTxt(8)">8</div>
    <div class="tasto" onclick="scriviTxt(9)">9</div><br>
-   <div class="tasto" onclick="scriviTxt('<')">&lt;</div>
+   <div class="tasto" onclick="scriviTxt('<')">&lt</div>
    <div class="tasto" onclick="scriviTxt('s')">s</div>
    <div class="tasto" onclick="scriviTxt('z')">z</div>
    <div class="tasto" onclick="scriviTxt(0)">0</div>
    <div class="tasto" onclick="scriviTxt('-')">-</div><br>
    <div class="tasto" onclick="scriviTxt('>')">&gt</div>
    <div class="tasto" onclick="scriviTxt('x')">x</div>
-   <div class="tasto" style="width:390px" onclick="scriviTxt('_')">___</div>
+   <div class="tasto" style="width:390px" onclick="scriviTxt(' ')">___</div>
  </div>
   <a href="https://docs.google.com/document/d/12QVBoBTFp7NUyzm3mmXX1KyOid-myt4_K6WE8-mMniI/edit?usp=sharing" target="_blank"> <div class="bottone"></div>
   </a>
- <div id="testo">
- </div>
+ <textarea name="testo" id="testo"> </textarea>
  <script src="script.js"></script>
 </body>
 </html>
