--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
    <div class="tasto" onclick="scriviTxt(5)">5</div>
    <div class="tasto" onclick="scriviTxt(6)">6</div><br>
    <div class="tasto" onclick="scriviTxt('v')">v</div>
-   <div class="tasto" onclick="scriviTxt('c')">c</div>
+   <div class="tasto" onclick="scriviTxt('q')">c</div>
    <div class="tasto" onclick="scriviTxt(7)">7</div>
    <div class="tasto" onclick="scriviTxt(8)">8</div>
    <div class="tasto" onclick="scriviTxt(9)">9</div><br>
    <div class="tasto" onclick="scriviTxt('<')">&lt</div>
-   <div class="tasto" onclick="scriviTxt('s')">s</div>
+   <div class="tasto" onclick="scriviTxt('t')">s</div>
    <div class="tasto" onclick="scriviTxt('z')">z</div>
    <div class="tasto" onclick="scriviTxt(0)">0</div>
    <div class="tasto" onclick="scriviTxt('-')">-</div><br>
