--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    <div class="tasto" onclick="scriviTxt('-')">-</div><br>
    <div class="tasto" onclick="scriviTxt('>')">&gt</div>
    <div class="tasto" onclick="scriviTxt('x')">x</div>
-   <div class="tasto" style="width:390px" onclick="scriviTxt(' ')">___</div>
+   <div class="tasto" style="width:54vw" onclick="scriviTxt(' ')">___</div>
  </div>
   <a href="https://docs.google.com/document/d/12QVBoBTFp7NUyzm3mmXX1KyOid-myt4_K6WE8-mMniI/edit?usp=sharing" target="_blank"> <div class="bottone"></div>
   </a>
