--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div id="specchietto" class="specchietto_cl">
+
+  <div class="etichetta">Fill</div>
+  <div class="campione" onclick=""></div>
+
+  <div class="etichetta">Stroke</div>
+  <div class="campione" onclick=""></div>
+
+  <div class="etichetta">Weight</div>
+  <div class="campione" onclick=""></div>
+
+  <div class="etichetta">Dash</div>
+  <div class="campione" onclick=""></div>
+
+  <div class="etichetta">Height</div>
+  <div class="campione" onclick=""></div>
+
+</div>
  <div class="tastiera">
    <div class="tasto" onclick="scriviTxt('M')">M</div>
    <div class="tasto" onclick="scriviTxt('m')">m</div>
