--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="specchietto" class="specchietto_cl">
+  <div id="specchietto" class="specchietto_cl onclick="attiva()">
 
   <div class="etichetta">Fill</div>
   <div class="campione" onclick=""></div>
