--- a/index.html
+++ b/index.html
@@ -6,52 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="specchietto" class="specchietto_cl onclick="attiva()">XXX
-
-  <div class="etichetta">Fill</div>
-  <div class="campione" onclick=""></div>
-
-  <div class="etichetta">Stroke</div>
-  <div class="campione" onclick=""></div>
-
-  <div class="etichetta">Weight</div>
-  <div class="campione" onclick=""></div>
-
-  <div class="etichetta">Dash</div>
-  <div class="campione" onclick=""></div>
-
-  <div class="etichetta">Height</div>
-  <div class="campione" onclick=""></div>
-
+  <div id="specchietto" class="specchietto_cl">XXX
 </div>
- <div class="tastiera">
-   <div class="tasto" onclick="scriviTxt('M')">M</div>
-   <div class="tasto" onclick="scriviTxt('m')">m</div>
-   <div class="tasto" onclick="scriviTxt(1)">1</div>
-   <div class="tasto" onclick="scriviTxt(2)">2</div>
-   <div class="tasto" onclick="scriviTxt(3)">3</div><br>
-   <div class="tasto" onclick="scriviTxt('h')">h</div>
-   <div class="tasto" onclick="scriviTxt('l')">l</div>
-   <div class="tasto" onclick="scriviTxt(4)">4</div>
-   <div class="tasto" onclick="scriviTxt(5)">5</div>
-   <div class="tasto" onclick="scriviTxt(6)">6</div><br>
-   <div class="tasto" onclick="scriviTxt('v')">v</div>
-   <div class="tasto" onclick="scriviTxt('q')">q</div>
-   <div class="tasto" onclick="scriviTxt(7)">7</div>
-   <div class="tasto" onclick="scriviTxt(8)">8</div>
-   <div class="tasto" onclick="scriviTxt(9)">9</div><br>
-   <div class="tasto" onclick="scriviTxt('<')">&lt</div>
-   <div class="tasto" onclick="scriviTxt('t')">t</div>
-   <div class="tasto" onclick="scriviTxt('z')">z</div>
-   <div class="tasto" onclick="scriviTxt(0)">0</div>
-   <div class="tasto" onclick="scriviTxt('-')">-</div><br>
-   <div class="tasto" onclick="scriviTxt('>')">&gt</div>
-   <div class="tasto" onclick="scriviTxt('x')">x</div>
-   <div class="tasto" style="width:54vw" onclick="scriviTxt(' ')">___</div>
- </div>
-  <a href="https://docs.google.com/document/d/12QVBoBTFp7NUyzm3mmXX1KyOid-myt4_K6WE8-mMniI/edit?usp=sharing" target="_blank"> <div class="bottone"></div>
-  </a>
- <textarea name="testo" id="testo"> </textarea>
- <script src="script.js"></script>
 </body>
 </html>
