--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="specchietto" class="specchietto_cl">XXX
+  <div id="specchietto" class="specchietto_cl">
 </div>
 </body>
 </html>
