--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="stile" onclick="cambioStile()"></div>
   <div class="durata" onclick="cambioDurata()"></div>
   <div id="elemento" style="border-radius: 100px;" class="orizzontale" onclick="cambioForma()"></div>
-  <div id="specchietto" class="specchietto_cl"></div>
+  <div class="specchietto_cl" onclick="cambioDurata()"></div>
   <script src="animation.js"></script>
 </body>
 </html>
